fix flickering when refresh page

--- a/airflow/www/static/css/bootstrap-theme.css
+++ b/airflow/www/static/css/bootstrap-theme.css
@@ -36,8 +36,11 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
-html.dark-mode{
-  filter: invert(100%)hue-rotate(180deg);
+html[data-color-scheme='dark'] {
+  filter:invert(100%)hue-rotate(180deg);
+}
+html[data-color-scheme='light'] {
+
 }
 body {
   margin: 0;
@@ -300,9 +303,6 @@ th {
 html {
   font-size: 12px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-html.dark-mode{
-  filter: invert(100%)hue-rotate(180deg);
 }
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
